frontend/test/should_fail/index_exec_edge_fromIndexFromToAsArrayAscending_index_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:int)
{
	{ i:array<AEdge>=edgesFromIndexFromAsArrayAscending(j, j) }
}